--- a/package.json
+++ b/package.json
@@ -3,19 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^5.16.4",
-    "@testing-library/react": "^13.3.0",
-    "@testing-library/user-event": "^13.5.0",
-    "@types/jest": "^27.5.2",
-    "@types/node": "^16.11.38",
-    "@types/react": "^18.0.11",
-    "@types/react-dom": "^18.0.5",
-    "react-scripts": "5.0.1",
-    "tsconfig": "workspace:*",
-    "typescript": "^4.7.3",
-    "web-vitals": "^2.1.4",
     "react": "^18.1.0",
-    "react-dom": "^18.1.0"
+    "react-dom": "^18.1.0",
+    "react-router-dom": "^6.3.0",
+    "web-vitals": "^2.1.4"
   },
   "scripts": {
     "dev": "craco start",
@@ -42,6 +33,16 @@
     ]
   },
   "devDependencies": {
-    "@craco/craco": "^6.4.3"
+    "@craco/craco": "^6.4.3",
+    "@testing-library/jest-dom": "^5.16.4",
+    "@testing-library/react": "^13.3.0",
+    "@testing-library/user-event": "^13.5.0",
+    "@types/jest": "^27.5.2",
+    "@types/node": "^16.11.38",
+    "@types/react": "^18.0.11",
+    "@types/react-dom": "^18.0.5",
+    "react-scripts": "5.0.1",
+    "tsconfig": "workspace:*",
+    "typescript": "^4.7.3"
   }
 }
