--- a/package.json
+++ b/package.json
@@ -4,8 +4,10 @@
   "private": true,
   "dependencies": {
     "core": "workspace:*",
+    "layout": "workspace:*",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
+    "react-query": "^3.39.1",
     "react-router-dom": "^6.3.0",
     "web-vitals": "^2.1.4"
   },
